--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=0f51648d176fba626a503a7f1c4ae575
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/testAPI
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
