--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/security-bundle": "4.2.*",
+        "symfony/serializer": "4.2.*",
         "symfony/translation": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/yaml": "4.2.*"
